# internship-unexpo-bedrock

./: ..gitignore.kate-swp  .gitignore  Pipfile  pyproject.toml  readme.md
src/gsm_module/: gsm_function.py  mqtt_client.py  psql_function.py  sim_800l.py
src/mobile_app/: app.json  index.js  package-lock.json  package.json
src/mobile_app/__tests__/: App-test.js
src/mobile_app/android/: settings.gradle
src/mobile_app/android/app/: build.gradle
src/mobile_app/ios/: Podfile
src/mobile_app/ios/Bedrock/: AppDelegate.m  Info.plist
src/mobile_app/ios/Bedrock.xcodeproj/: project.pbxproj
src/mobile_app/ios/BedrockTests/: BedrockTests.m
src/mobile_app/ios/mobile_app.xcodeproj/: project.pbxproj
src/mobile_app/src/: App.js  ]  constants.js  packages.json
src/mobile_app/src/api/: allowedModes.js  funnel.js  index.js  numbers.js  profile.js  requestProfile.js  usersdata.js
src/mobile_app/src/components/: StackRootScreen.js
src/server/: ]  mqtt.py
src/server/bconf.d/: broker.conf  pwfile.txt
src/server/logs/: __init__.py  admin.py  models.py  mqtt.py  serializers.py  urls.py  views.py
src/server/nums/: admin.py  models.py  serializers.py  urls.py  views.py
src/server/server/: settings.py
src/server/settings/: __init__.py  routing.py  settings.py  urls.py
src/server/userData/: admin.py  apps.py  models.py  serializers.py  views.py
src/server/userHome/: admin.py  models.py  serializers.py  views.py
src/server/userManagement/: admin.py  models.py
src/server_copia/logs/: admin.py  urls.py
src/server_copia/nums/: serializers.py
(+124 files in other folders)
